--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Loading galaxy...  Loading mission...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
