- docs - UI tweaks

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <div id="app">Loading galaxy...  Loading mission...</div>
+    <div id="app">
+      <h1>
+        Loading galaxy...  Loading mission...
+      </h1>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
